// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should output correct filter merged file with id as messageContext 1`] = `
{
  "zh-CN": {
    "App.errorMessage": "",
    "App.errorButton": "",
    "NotFound.errorButton": "",
    "App.Creator 1": "建立者（簡中1）",
    "App.Creator 2": "建立者（簡中2）",
    "NotFound.Creator": ""
  },
  "zh-TW": {
    "App.errorMessage": "",
    "App.errorButton": "",
    "NotFound.errorButton": "",
    "App.Creator 1": "建立者（繁中1）",
    "App.Creator 2": "建立者（繁中2）",
    "NotFound.Creator": ""
  }
}
`;

exports[`should output correct filter merged file with id as messageKey 1`] = `
{
  "zh-CN": {
    "App.errorMessage": "",
    "App.errorButton": "",
    "App.Creator 1": "建立者（簡中1）",
    "App.Creator 2": "建立者（簡中2）",
    "NotFound.errorButton": "",
    "NotFound.Creator": ""
  },
  "zh-TW": {
    "App.errorMessage": "",
    "App.errorButton": "",
    "App.Creator 1": "建立者（繁中1）",
    "App.Creator 2": "建立者（繁中2）",
    "NotFound.errorButton": "",
    "NotFound.Creator": ""
  }
}
`;

exports[`should output json file with prefix char if indentation char is used 1`] = `
{
		"zh-CN": {
				"App.errorMessage": "",
				"App.errorButton": "",
				"NotFound.errorButton": "",
				"App.Creator 1": "建立者（簡中）",
				"App.Creator 2": "建立者（簡中）",
				"NotFound.Creator": "建立者（簡中）"
		},
		"zh-TW": {
				"App.errorMessage": "",
				"App.errorButton": "",
				"NotFound.errorButton": "",
				"App.Creator 1": "建立者",
				"App.Creator 2": "建立者",
				"NotFound.Creator": "建立者"
		}
}
`;

exports[`should output json file with spaces if indentation number is used 1`] = `
{
    "zh-CN": {
        "App.errorMessage": "",
        "App.errorButton": "",
        "NotFound.errorButton": "",
        "App.Creator 1": "建立者（簡中）",
        "App.Creator 2": "建立者（簡中）",
        "NotFound.Creator": "建立者（簡中）"
    },
    "zh-TW": {
        "App.errorMessage": "",
        "App.errorButton": "",
        "NotFound.errorButton": "",
        "App.Creator 1": "建立者",
        "App.Creator 2": "建立者",
        "NotFound.Creator": "建立者"
    }
}
`;

exports[`should output one file per locale if a *directory* is set 1`] = `
{
  "App.errorMessage": "",
  "App.errorButton": "",
  "NotFound.errorButton": "",
  "App.Creator 1": "建立者（簡中）",
  "App.Creator 2": "建立者（簡中）",
  "NotFound.Creator": "建立者（簡中）"
}
`;

exports[`should output one file per locale if a *directory* is set 2`] = `
{
  "App.errorMessage": "",
  "App.errorButton": "",
  "NotFound.errorButton": "",
  "App.Creator 1": "建立者",
  "App.Creator 2": "建立者",
  "NotFound.Creator": "建立者"
}
`;

exports[`should output one file per locale if a *directory* is set, using custom lang mapper regex 1`] = `
{
  "App.errorMessage": "",
  "App.errorButton": "",
  "NotFound.errorButton": "",
  "App.Creator 1": "",
  "App.Creator 2": "",
  "NotFound.Creator": ""
}
`;

exports[`should output one file per locale if a *directory* is set, using custom lang mapper regex 2`] = `
{
  "App.errorMessage": "",
  "App.errorButton": "",
  "NotFound.errorButton": "",
  "App.Creator 1": "",
  "App.Creator 2": "",
  "NotFound.Creator": ""
}
`;

exports[`should output one merged file if a *json file* is set 1`] = `
{
  "zh-CN": {
    "App.errorMessage": "",
    "App.errorButton": "",
    "NotFound.errorButton": "",
    "App.Creator 1": "建立者（簡中）",
    "App.Creator 2": "建立者（簡中）",
    "NotFound.Creator": "建立者（簡中）"
  },
  "zh-TW": {
    "App.errorMessage": "",
    "App.errorButton": "",
    "NotFound.errorButton": "",
    "App.Creator 1": "建立者",
    "App.Creator 2": "建立者",
    "NotFound.Creator": "建立者"
  }
}
`;

exports[`should output sorted file if sortById is used 1`] = `
{
  "zh-CN": {
    "App.Creator 1": "建立者（簡中）",
    "App.Creator 2": "建立者（簡中）",
    "App.errorButton": "",
    "App.errorMessage": "",
    "NotFound.Creator": "建立者（簡中）",
    "NotFound.errorButton": ""
  },
  "zh-TW": {
    "App.Creator 1": "建立者",
    "App.Creator 2": "建立者",
    "App.errorButton": "",
    "App.errorMessage": "",
    "NotFound.Creator": "建立者",
    "NotFound.errorButton": ""
  }
}
`;
